crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_golden__json_with_archetype.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_golden.rs
assertion_line: 270
expression: out
---
{
  "schema_version": 9,
  "generated_at_ms": 0,
  "tool": {
    "name": "tokmd",
    "version": "0.0.0-test"
  },
  "mode": "analyze",
  "status": "complete",
  "warnings": [],
  "source": {
    "inputs": [
      "."
    ],
    "export_path": null,
    "base_receipt_path": null,
    "export_schema_version": null,
    "export_generated_at_ms": null,
    "base_signature": null,
    "module_roots": [],
    "module_depth": 1,
    "children": "collapse"
  },
  "args": {
    "preset": "receipt",
    "format": "json",
    "window_tokens": null,
    "git": null,
    "max_files": null,
    "max_bytes": null,
    "max_commits": null,
    "max_commit_files": null,
    "max_file_bytes": null,
    "import_granularity": "module"
  },
  "archetype": {
    "kind": "library",
    "evidence": [
      "Cargo.toml",
      "src/lib.rs"
    ]
  },
  "topics": null,
  "entropy": null,
  "predictive_churn": null,
  "corporate_fingerprint": null,
  "license": null,
  "derived": null,
  "assets": null,
  "deps": null,
  "git": null,
  "imports": null,
  "dup": null,
  "complexity": null,
  "api_surface": null,
  "effort": null,
  "fun": null
}
