crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_golden__md_minimal.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_golden.rs
assertion_line: 296
expression: out
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
