crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_golden__mermaid_with_imports.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_golden.rs
assertion_line: 366
expression: out
---
graph TD
  mod_a -->|2| mod_b
  mod_b -->|7| mod_c
  mod_a -->|1| mod_c
