crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_golden__tree_minimal.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_golden.rs
assertion_line: 389
expression: out
---
(tree unavailable)
